--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "Felipe Mancilla",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "node-fetch": "^3.2.10"
   },
   "keywords": [],
-  "type": "module",
-  "devDependencies": {}
+  "type": "module"
 }
